correzione margin top del main (calc) + width container (1440)

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .container {
-    max-width: 1000px;
+    max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -67,7 +67,7 @@ main .container {
     flex-wrap: wrap;
     gap: 20px;
 
-    padding-top: 120px;
+    margin-top: calc(72px + 66px);
 
 }
 
